Fri Oct 20 09:36:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

	* bin/MakeProjectCreator/config/ciao_nodeapplicationmanager.mpb:
	* bin/MakeProjectCreator/config/ciao_nodemanager_stub.mpb:
	* bin/MakeProjectCreator/config/ciao_targetmanager_stub.mpb:
	  New base projects

	* bin/MakeProjectCreator/config/ciao_static_dnc_app.mpb:
	  Use the new base projects above

          Thanks to Abdul Sowayan <abdullah dot sowayan at lmco dot com>
          for delivering these files

Fri Oct 20 09:00:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

	* ace/os_include/sys/os_socket.h:
	  Defined AF_UNSPEC and PF_UNSPEC when these are not defined by the
	  OS header files.

Fri Oct 20 08:55:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

	* ace/os_include/sys/os_uio.h:
	  When INADDR_ANY is not defined, then define it, we need it in several
	  of the ACE header files

Fri Oct 20 08:44:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

	* ace/os_include/sys/os_uio.h:
	  We define iovec when ACE_WIN32 was defined, changed this to a new
	  define, ACE_LACKS_IOVEC to make it easier to use with other platforms

	* ace/config-win32-common.h:
	  Added ACE_LACKS_IOVEC

	* ace/config-rtems.h:
	  When no networking has been configured, also define ACE_LACKS_IOVEC

Thu Oct 19 22:28:59 UTC 2006  Shanshan Jiang <shanshan.jiang@vanderbilt.edu>

        * contrib/minizip/iowin32.c
        * contrib/minizip/iowin32.h
          Removed these files.

Thu Oct 19 23:20:26 UTC 2006  Ossama Othman  <ossama_othman at symantec dot com>

        * examples/IPC_SAP/SOCK_SAP/CPP-inserver.cpp:
        * examples/IPC_SAP/SOCK_SAP/CPP-inclient.cpp:
        * examples/C++NPv1/Reactive_Logging_Server.h:

          Fixed integer/void* conversion related warnings by using
          the "intptr_t" type instead of "int" or "long".

Thu Oct 19 22:58:02 UTC 2006  Ossama Othman  <ossama_othman at symantec dot com>

        * ace/Truncate.h:
