@@ -164,6 +164,7 @@
 #define ACE_LACKS_GETHOSTBYADDR
 #define ACE_LACKS_GETHOSTBYNAME
 #define ACE_LACKS_GETIPNODEBYADDR
+#define ACE_LACKS_LISTEN
 
 // Missing OS features
 #define ACE_LACKS_UNIX_SYSLOG
